fixed svg alignment in favourite component

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,7 +9,7 @@
   font-size: 13px;
   line-height: 127.34%;
   /* identical to box height, or 17px */
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   color: #ffffff;
   margin-right: 14px;
@@ -37,13 +37,13 @@
     width: 76px;
     height: 37px;
     margin-right: 7px;
-    overflow: hidden;
+    
   }
   .rem-button {
     width: 76px;
     height: 37px;
     margin-right: 7px;
-    overflow: hidden;
+    
 
   }
 }
